--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
                         <input type="email" class="itemTexto" name="" id="">
                     </div>
                     <div class="item">
-                        <label for="">Contraseña:</label>
+                        <label for="">Password:</label>
                         <input type="password" class="itemTexto" name="" id="">
                     </div>                 
                 </div>
