--- a/login.html
+++ b/login.html
@@ -28,7 +28,15 @@
                     <div class="item">
                         <label for="">Password:</label>
                         <input type="password" class="itemTexto" name="" id="">
-                    </div>                 
+                    </div>   
+                    <div class="item">
+                        <label for="">Correo:</label>
+                        <input type="email" class="itemTexto" name="" id="">
+                    </div>
+                    <div class="item">
+                        <label for="">Password:</label>
+                        <input type="password" class="itemTexto" name="" id="">
+                    </div>               
                 </div>
             </form>
 
